--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
+# Virtual environments
+venv/
+ENV/
+env/
+.venv/
+
+# Outputs
+*.png
+*.jpg
+*.pdf
+
+# Misc
+.DS_Store
+*.swp
+*~
